--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "node-api",
-  "main": "server.js",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon ./bin/www"
+  },
   "dependencies": {
     "body-parser": "~1.0.1",
     "crypto": "~0.0.3",
     "express": "~4.0.0",
     "mysql": "~2.5.0",
-    "sequelize": "~1.7.0"
+    "sequelize": "~1.7.0",
+    "debug": "~2.2.0"
   }
 }
