--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "node-api",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon --harmony ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.0.1",
+    "co": "^4.6.0",
+    "co-request": "^1.0.0",
     "crypto": "~0.0.3",
+    "debug": "~2.2.0",
     "express": "~4.0.0",
     "mysql": "~2.5.0",
-    "sequelize": "~1.7.0",
-    "debug": "~2.2.0"
+    "sequelize": "~1.7.0"
   }
 }
